--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -198,9 +198,9 @@
        
         <p>Employee A does not live on a reserve and works at a lumber mill located on land that was once part of her First Nation’s reserve. In 1968, employee A’s First Nation surrendered to the Crown some of its reserve land for sale to a private lumber company to build the lumber mill. As part of the surrender for sale, the private lumber company agreed to provide employment for members of the First Nation at the mill.</p>
 <p>Since employee A does not live on a reserve, the employee's employer is not resident on a reserve, and the employee's duties of employment are not performed on a reserve, the guidelines <strong>do not</strong> apply to exempt employee's employment income from income tax. However, the connecting factors that are given the most weight in this situation are all of the following:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">The circumstances in which the mill came to be built and operated on land (that was once part of the reserve but was surrendered to the Crown for sale to permit the mill to be built)</li>
-<li class="cnjnctn-col">The fact that there were reasonable expectations at that time that the mill would provide employment for members of the First Nation</li>
+<ul>
+<li>The circumstances in which the mill came to be built and operated on land (that was once part of the reserve but was surrendered to the Crown for sale to permit the mill to be built)</li>
+<li>The fact that there were reasonable expectations at that time that the mill would provide employment for members of the First Nation</li>
 </ul>
 <p>Employee A’s employment income is therefore considered situated on a reserve and is exempt from income tax.</p>
 
@@ -286,7 +286,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Where the customers are located</li>
 </ul>
 <p>Other connecting factors that the courts have found to be less significant are:</p>
-<ul>
+<ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Whether or not you live on a reserve</li>
 <li><span class="fas fa-check fa-li text-success"></span> Whether you maintain an office on a reserve or take business orders from a location on a reserve</li>
 <li><span class="fas fa-check fa-li text-success"></span> Whether your books and records are kept on a reserve</li>
@@ -315,21 +315,21 @@
     <p>Individual C operates a trucking business that hauls logs from cutting sites located off-reserve to logging mills located off-reserve. Individual C's only customer is a logging company that is not located on a reserve. Individual C has a garage on a reserve where individual C stores their trucks and an on-reserve office where the individual C keeps the books and records for the business. Individual C travels 20 kms from their off-reserve home each day to pick up their truck from the on-reserve garage. Individual C then travels to the off-reserve cutting sites. Individual C spends a few hours each week doing the bookkeeping for the business at the on-reserve office.</p>
     <p>Individual C’s self-employed income is considered to be <strong>taxable</strong>. The following factors are the most significant and connect the income off-reserve:</p>
     <ul>
-      <li>The income-generating activities of hauling lumber occurs off-reserve.</li>
-      <li>The business’ only customer is located off-reserve.</li>
-      <li>Most of the business decisions are made off-reserve.</li>
-      <li>Peter does not live on-reserve.</li>
+      <li>The income-generating activities of hauling lumber occurs off-reserve</li>
+      <li>The business’ only customer is located off-reserve</li>
+      <li>Most of the business decisions are made off-reserve</li>
+      <li>Peter does not live on-reserve</li>
     </ul>
     <p>The on-reserve activities are limited to providing a place to park the trucks when not in use and maintain the books and records. These factors are not significant enough to connect the business income to a reserve.</p>
 
  <h4>Example - Individual D</h4>
-    <p>Ronald operates a business that clears land off-reserve for oil and gas companies. He has always lived on a reserve and is an active member of his First Nation’s community. He started and grew his business with his wife from a home office on-reserve. It is from this office that Ronald bids on contracts for new business, negotiates contracts, and completes pre-qualifying questionnaires for the potential customers in order to qualify for the bidding process. The workers are hired, trained and dispatched to off-reserve work-sites from the home office on-reserve. While the workers are at work-sites, Ronald ensures from the home office on-reserve that the workers are managed properly and that they have the equipment and supplies needed to carry out their duties. All equipment for the business is stored on-reserve when not in use and all of the books and records for the business are stored and maintained at the home office on-reserve.<br>
-      This type of business has been characterized by the courts as “nomadic”, as it has a base in one area (on-reserve), while engaging in work activities in other areas (off-reserve). The courts have held that the fact that the work activities were undertaken off-reserve would not in and of itself result in the income earned being situated off-reserve. <br>
+    <p>Ronald operates a business that clears land off-reserve for oil and gas companies. He has always lived on a reserve and is an active member of his First Nation’s community. He started and grew his business with his wife from a home office on-reserve. It is from this office that Ronald bids on contracts for new business, negotiates contracts, and completes pre-qualifying questionnaires for the potential customers in order to qualify for the bidding process. The workers are hired, trained and dispatched to off-reserve work-sites from the home office on-reserve. While the workers are at work-sites, Ronald ensures from the home office on-reserve that the workers are managed properly and that they have the equipment and supplies needed to carry out their duties. All equipment for the business is stored on-reserve when not in use and all of the books and records for the business are stored and maintained at the home office on-reserve. </p>
+   <p>This type of business has been characterized by the courts as “nomadic”, as it has a base in one area (on-reserve), while engaging in work activities in other areas (off-reserve). The courts have held that the fact that the work activities were undertaken off-reserve would not in and of itself result in the income earned being situated off-reserve.  </p>
       In this scenario, Ronald’s self-employed business income is <strong>tax-exempt</strong>. The following factors are given the most weight and connect the income to a reserve:</p>
     <ul>
-      <li>On-reserve effort expended obtaining contracts since the nature of the business is performing contracts obtained on a competitive bid process.</li>
-      <li>On-reserve location where the management and decision-making activities take place.</li>
-      <li>The owner not only lives on the reserve but has a strong connection to the community on the reserve and started and grew the business on the reserve.</li>
+	<li>On-reserve effort expended obtaining contracts since the nature of the business is performing contracts obtained on a competitive bid process</li>
+      <li>On-reserve location where the management and decision-making activities take place</li>
+      <li>The owner not only lives on the reserve but has a strong connection to the community on the reserve and started and grew the business on the reserve</li>
     </ul>
   </div>
 <p>If you need help, call the CRA at <strong>1-800-959-5525</strong>. </p>
