--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -300,7 +300,7 @@
 
 <p>The following examples may help you determine if your business income is situated on a reserve, and thus exempt from tax.</p>
 
-<details><summary>Examples of business income situated on a reserve</summary>
+<details><summary>Examples where exempt and where not exempt</summary>
 <section class="alert alert-info">
 <p>Each of the individuals in the following examples is registered as an Indian under the Indian Act. The examples concern income tax only and do not discuss GST/HST implications.</p>
 </section>
@@ -323,9 +323,9 @@
     <p>The on-reserve activities are limited to providing a place to park the trucks when not in use and maintain the books and records. These factors are not significant enough to connect the business income to a reserve.</p>
 
  <h4>Example - Individual D</h4>
-    <p>Ronald operates a business that clears land off-reserve for oil and gas companies. He has always lived on a reserve and is an active member of his First Nation’s community. He started and grew his business with his wife from a home office on-reserve. It is from this office that Ronald bids on contracts for new business, negotiates contracts, and completes pre-qualifying questionnaires for the potential customers in order to qualify for the bidding process. The workers are hired, trained and dispatched to off-reserve work-sites from the home office on-reserve. While the workers are at work-sites, Ronald ensures from the home office on-reserve that the workers are managed properly and that they have the equipment and supplies needed to carry out their duties. All equipment for the business is stored on-reserve when not in use and all of the books and records for the business are stored and maintained at the home office on-reserve. </p>
+    <p>Individual D operates a business that clears land off-reserve for oil and gas companies. Individual D has always lived on a reserve and is an active member of their First Nation’s community. Individual D started and grew their business with the wife from a home office on-reserve. It is from this office that individual D bids on contracts for new business, negotiates contracts, and completes pre-qualifying questionnaires for the potential customers in order to qualify for the bidding process. The workers are hired, trained and dispatched to off-reserve work-sites from the home office on-reserve. While the workers are at work-sites, individual D ensures from the home office on-reserve that the workers are managed properly and that they have the equipment and supplies needed to carry out their duties. All equipment for the business is stored on-reserve when not in use and all of the books and records for the business are stored and maintained at the home office on-reserve. </p>
    <p>This type of business has been characterized by the courts as “nomadic”, as it has a base in one area (on-reserve), while engaging in work activities in other areas (off-reserve). The courts have held that the fact that the work activities were undertaken off-reserve would not in and of itself result in the income earned being situated off-reserve.  </p>
-      In this scenario, Ronald’s self-employed business income is <strong>tax-exempt</strong>. The following factors are given the most weight and connect the income to a reserve:</p>
+  <p>    In this example, individual D’s self-employed business income is <strong>tax-exempt</strong>. The following factors are given the most weight and connect the income to a reserve:</p>
     <ul>
 	<li>On-reserve effort expended obtaining contracts since the nature of the business is performing contracts obtained on a competitive bid process</li>
       <li>On-reserve location where the management and decision-making activities take place</li>
@@ -336,14 +336,15 @@
 </details>
    
         <h3>Prorating business income and expenses</h3>
-<p>If some of your revenue-generating activities take place on a reserve and the rest off a reserve, the tax exemption under section&nbsp;87 of the Indian Act may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation can be shown to be more reasonable.</p>
+<p>If some of your revenue-generating activities take place on a reserve and the rest off a reserve, the tax exemption under section&nbsp;87 of the Indian Act may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. </p>
+<p>In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation can be shown to be more reasonable.</p>
 
 <details><summary>Example of proration of the income</summary>
  <div id="example-self-business-prorate"> 
     
-    <h4>Example - Business E</h4>
+    <h4>Example - Individual E</h4>
 
-    <p>Arnold works as a self-employed plumber. Arnold lives off a reserve, and operates out of an office that is located off a reserve. He earns 60% of his revenue from providing plumbing services to customers who live on a nearby reserve. As a result, 60% of Arnold's plumbing income is <strong>tax-exempt.</strong> Arnold can deduct 40% of his business expenses from the 40% of his plumbing income that is subject to tax, unless the facts indicate that it would be more reasonable to allocate his revenue and expenses differently.</p>
+    <p>Individual E works as a self-employed plumber. Individual E lives off a reserve, and operates out of an office that is located off a reserve. Individual E earns 60% of their revenue from providing plumbing services to customers who live on a nearby reserve. As a result, 60% of individual E's plumbing income is <strong>tax-exempt.</strong> Individual E can deduct 40% of their business expenses from the 40% of their plumbing income that is subject to tax, unless the facts indicate that it would be more reasonable to allocate the individual E revenue and expenses differently.</p>
   </div>
 </details>
 
