--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -354,31 +354,39 @@
 <p>If you are a member of a partnership, your partnership income will be taxed in the same way as any other business income. For purposes of section 87 of the Indian Act, the key factors to consider will be similar to those set out above under the heading <a href="#hdng5-1">Connecting factors for business income</a>.</p>
 <p>Under the Income Tax Act, partnership income is first calculated as if the partnership were a separate person. Your share of the partnership income from each source will be allocated to you, and will retain its characteristics as to source and nature.</p>
 
-<details><summary>Example of partnership income</summary>
+<details><summary>Examples where exempt</summary>
  <div id="example-self-business-partner"> 
     
-   <h4>Example - Partnership A</h4>
-  <p>Gayle is a 50% partner in a partnership that runs a gas station and convenience store on a reserve. The other 50% of the partnership is owned by an individual who is not registered as an Indian. The gas station and convenience store earns all of its income from sales to customers on the reserve. There is a small office in the convenience store where the books and records are kept and where all business decisions are made.</p>
+   <h4>Example - Individual F</h4>
+  <p>Individual F is a 50% partner in a partnership that runs a gas station and convenience store on a reserve. The other 50% of the partnership is owned by an individual who is not registered as an Indian. The gas station and convenience store earns all of its income from sales to customers on the reserve. There is a small office in the convenience store where the books and records are kept and where all business decisions are made.</p>
     <p>The following factors show a strong connection to the reserve:</p>
     <ul>
-      <li>All of the partnership’s income generating activities are on-reserve.</li>
-      <li>All sales are made on-reserve.</li>
-      <li>All of the business decisions are made on-reserve.</li>
+      <li>All of the partnership’s income generating activities are on-reserve</li>
+      <li>All sales are made on-reserve</li>
+      <li>All of the business decisions are made on-reserve</li>
     </ul>
-    <p>The partnership’s income that is allocated to Gayle is <strong>tax-exempt</strong>.</p>
+    <p>The partnership’s income that is allocated to the individual F is <strong>tax-exempt</strong>.</p>
  </div>
 </details>
 
        <h3 id="hdng7">Fishing</h3>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>If you carry on a commercial fishing business, your income from that business is generally treated the same as any other business income. Determining whether your business income is exempt from tax is based on the factors that connect income to a reserve.<br><br>
-In determining whether your commercial fishing business income is connected to a reserve, factors that may connect your business income to a reserve are (i) the location of your fishing activities – catching, preparing and transporting the fish and (ii) the location of your selling activities - including the location of your customers, and the location of the sale of the fish. Your income from a commercial fishing business is generally exempt from tax if the actual fishing activities of your business take place within the geographic boundaries of a reserve. If your fishing activities take place mainly off-reserve and your customers are located off-reserve, your fishing income may not qualify for the exemption under section 87 of the Indian Act. However, other connecting factors, described below, may apply to exempt your fishing income from tax.</p>
+In determining whether your commercial fishing business income is connected to a reserve, factors that may connect your business income to a reserve are:</p>
+ <ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> The location of your fishing activities, including catching, preparing and transporting the fish</li>
+<li><span class="fas fa-check fa-li text-success"></span> The location of your selling activities, including the location of your customers, and the location of the sale of the fish</li>
+</ul>
+<p>Your income from a commercial fishing business is generally exempt from tax if the actual fishing activities of your business take place within the geographic boundaries of a reserve. If your fishing activities take place mainly off-reserve and your customers are located off-reserve, your fishing income may not qualify for the exemption under section 87 of the Indian Act. However, other connecting factors, described below, may apply to exempt your fishing income from tax.</p>
+
+<details><summary>Prior court decisions</summary>
 <p>On March 20, 2012, the Federal Court of Appeal (FCA) released its decisions in the cases of Ron Ballantyne v. Her Majesty the Queen and Her Majesty the Queen v. Ronald Robertson and Roger Saunders (leave to appeal to the Supreme Court of Canada denied October 25, 2012). In both cases, the FCA found that the fishing income earned by the taxpayers was situated on a reserve and exempt from tax.</p>
-<p>The CRA will apply these decisions in similar situations, where the connections between the reserve and the fishing income are bona fide and there is no artificial manipulation of the connecting factors, to exempt all of your fishing income from tax for the 2012 and following tax years.</p>
+</details>
+<p>The CRA applies these decisions in similar situations, where the connections between the reserve and the fishing income are bona fide and there is no artificial manipulation of the connecting factors, to exempt all of your fishing income from tax for the 2012 and following tax years.</p>
 <p>A similar situation means that <strong>all</strong> of the following conditions are met:</p>
-<ul>
-<li>Your fishing activities in waters near or abutting the reserve have a significant historical and continuing important economic connection to the reserve; and</li>
-<li>You are a member of a cooperative of band members or a member of a band that owns and operates an organization located on the reserve that has a predominant role in your fishing and selling activities and an important role in the general economic life of the reserve.</li>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> Your fishing activities in waters near or abutting the reserve have a significant historical and continuing important economic connection to the reserve</li>
+<li><span class="fas fa-check fa-li text-success"></span> You are a member of a cooperative of band members or a member of a band that owns and operates an organization located on the reserve that has a predominant role in your fishing and selling activities and an important role in the general economic life of the reserve</li>
 </ul>
 <p>Where the above conditions <strong>are not met</strong> and your fishing and selling activities take place off-reserve, your income from fishing will likely be taxable. Where these activities take place both on- and off-reserve, the tax exemption provided for under section 87 of the Indian Act may be prorated. Some of the revenue-generating activities may include preparing the fish for market (e.g., filleting, shelling, icing, canning, freezing, smoking, salting, cooking, and pickling). If this type of processing takes place on a reserve, part of your business income may be exempt, depending on the extent and complexity of the processing done.</p>
 <p>The allocation of income between off-reserve fishing activities and on-reserve fish-processing activities is determined on a case-by-case basis and should be reasonable in the circumstances. Since your main revenue-generating activities are catching and selling the fish, the exemption, if any, would usually apply only to that portion of your fishing income that specifically relates to the value-added processing activities that are conducted on a reserve. Your business expenses are generally allocated in the same proportion as your revenues, unless another allocation is more reasonable in the circumstances.</p>
