--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -379,6 +379,8 @@ In determining whether your commercial fishing business income is connected to a
 </ul>
 <p>Your income from a commercial fishing business is generally exempt from tax if the actual fishing activities of your business take place within the geographic boundaries of a reserve. If your fishing activities take place mainly off-reserve and your customers are located off-reserve, your fishing income may not qualify for the exemption under section 87 of the Indian Act. However, other connecting factors, described below, may apply to exempt your fishing income from tax.</p>
 
+<p>If the income if for an <strong>employee </strong>of your commercial fishing business, the CRA treats the income according to the guidelines, continue to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a>.</p>
+
 <details><summary>Prior court decisions</summary>
 <p>On March 20, 2012, the Federal Court of Appeal (FCA) released its decisions in the cases of Ron Ballantyne v. Her Majesty the Queen and Her Majesty the Queen v. Ronald Robertson and Roger Saunders (leave to appeal to the Supreme Court of Canada denied October 25, 2012). In both cases, the FCA found that the fishing income earned by the taxpayers was situated on a reserve and exempt from tax.</p>
 </details>
@@ -390,9 +392,7 @@ In determining whether your commercial fishing business income is connected to a
 </ul>
 <p>Where the above conditions <strong>are not met</strong> and your fishing and selling activities take place off-reserve, your income from fishing will likely be taxable. Where these activities take place both on- and off-reserve, the tax exemption provided for under section 87 of the Indian Act may be prorated. Some of the revenue-generating activities may include preparing the fish for market (e.g., filleting, shelling, icing, canning, freezing, smoking, salting, cooking, and pickling). If this type of processing takes place on a reserve, part of your business income may be exempt, depending on the extent and complexity of the processing done.</p>
 <p>The allocation of income between off-reserve fishing activities and on-reserve fish-processing activities is determined on a case-by-case basis and should be reasonable in the circumstances. Since your main revenue-generating activities are catching and selling the fish, the exemption, if any, would usually apply only to that portion of your fishing income that specifically relates to the value-added processing activities that are conducted on a reserve. Your business expenses are generally allocated in the same proportion as your revenues, unless another allocation is more reasonable in the circumstances.</p>
-<section class="alert alert-info">
-	<p>The CRA treats the income of an <strong>employee </strong>of your commercial fishing business according to the <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">Indian Act Exemption for Employment Income Guidelines</a>.</p>
-</section>
+
 <details><summary>Examples fishing income</summary>
  <div id="example-fishing"> 
     
@@ -413,13 +413,7 @@ In determining whether your commercial fishing business income is connected to a
 <p>If you are a grain, vegetable, or fruit farmer, the location of the land where your crops are grown or harvested is the most important factor in connecting your income to a reserve. If you are a cattle rancher, the location of your rangeland is the most important connecting factor. If you are involved in other types of farming, the location of your farmland may vary in importance, depending on the nature of your business and the facts of your case. For instance, if your income is from a dairy operation, the location of your milking activities is likely more important than the location of your pastures or hayfields.</p>
 <p>If some of your revenue-generating activities from farming take place on a reserve and the rest off a reserve, the exemption may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation is more reasonable.</p>
 
- 
-
-<section class="alert alert-info">
-	
-	<p>The CRA treats the income of an <strong>employee </strong>of your farming business according to the <a href="https://www.canada.ca/en/revenue-agency/services/indigenous-peoples/indian-act-exemption-employment-income-guidelines.html">Indian Act Exemption for Employment Income Guidelines</a>.</p>
-</section>
-
+ <p>If the income if for an <strong>employee </strong>of your farming business, the CRA treats the income according to the guidelines, continue to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a>.</p>
     
         <h2 id="hdng9">Interest and investment income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
