--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1050,7 +1050,7 @@ html:lang(fr) .cnjnctn-or:before {
 			<p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
                 <br>
-                <h4 id="exempttax">Exemptions from paying the tax</h4>
+                <h4 id="exempttax">Determine if you are exempt from paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
               </div>
               <p class="wb-fieldflow-label"><span id="labelledby4a" aria-labelledby="labelledby4a labelledby4b">As an affected owner of the residential property, are you one of the following:</span></p>
