--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -339,7 +339,7 @@
 <p>If some of your revenue-generating activities take place on a reserve and the rest off a reserve, the tax exemption under section&nbsp;87 of the Indian Act may be prorated. Part of your income will therefore be taxable, and part will be exempt from tax. </p>
 <p>In such a case, your business expenses will generally be allocated to the taxable part of your income in the same ratio, unless another allocation can be shown to be more reasonable.</p>
 
-<details><summary>Example of proration of the income</summary>
+<details><summary>Example where partly-exempt (proration)</summary>
  <div id="example-self-business-prorate"> 
     
     <h4>Example - Individual E</h4>
@@ -371,8 +371,8 @@
 
        <h3 id="hdng7">Fishing</h3>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
-<p>If you carry on a commercial fishing business, your income from that business is generally treated the same as any other business income. Determining whether your business income is exempt from tax is based on the factors that connect income to a reserve.<br><br>
-In determining whether your commercial fishing business income is connected to a reserve, factors that may connect your business income to a reserve are:</p>
+<p>If you carry on a commercial fishing business, your income from that business is generally treated the same as any other business income. Determining whether your business income is exempt from tax is based on the factors that connect income to a reserve.</p>
+<p>In determining whether your commercial fishing business income is connected to a reserve, factors that may connect your business income to a reserve are:</p>
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> The location of your fishing activities, including catching, preparing and transporting the fish</li>
 <li><span class="fas fa-check fa-li text-success"></span> The location of your selling activities, including the location of your customers, and the location of the sale of the fish</li>
@@ -390,17 +390,18 @@ In determining whether your commercial fishing business income is connected to a
 <li><span class="fas fa-check fa-li text-success"></span> Your fishing activities in waters near or abutting the reserve have a significant historical and continuing important economic connection to the reserve</li>
 <li><span class="fas fa-check fa-li text-success"></span> You are a member of a cooperative of band members or a member of a band that owns and operates an organization located on the reserve that has a predominant role in your fishing and selling activities and an important role in the general economic life of the reserve</li>
 </ul>
-<p>Where the above conditions <strong>are not met</strong> and your fishing and selling activities take place off-reserve, your income from fishing will likely be taxable. Where these activities take place both on- and off-reserve, the tax exemption provided for under section 87 of the Indian Act may be prorated. Some of the revenue-generating activities may include preparing the fish for market (e.g., filleting, shelling, icing, canning, freezing, smoking, salting, cooking, and pickling). If this type of processing takes place on a reserve, part of your business income may be exempt, depending on the extent and complexity of the processing done.</p>
+<p>Where the above conditions <strong>are not met</strong> and your fishing and selling activities take place off-reserve, your income from fishing will likely be taxable. Where these activities take place both on- and off-reserve, the tax exemption provided for under section 87 of the Indian Act may be prorated. Some of the revenue-generating activities may include preparing the fish for market (for example: filleting, shelling, icing, canning, freezing, smoking, salting, cooking, and pickling). If this type of processing takes place on a reserve, part of your business income may be exempt, depending on the extent and complexity of the processing done.</p>
 <p>The allocation of income between off-reserve fishing activities and on-reserve fish-processing activities is determined on a case-by-case basis and should be reasonable in the circumstances. Since your main revenue-generating activities are catching and selling the fish, the exemption, if any, would usually apply only to that portion of your fishing income that specifically relates to the value-added processing activities that are conducted on a reserve. Your business expenses are generally allocated in the same proportion as your revenues, unless another allocation is more reasonable in the circumstances.</p>
 
-<details><summary>Examples fishing income</summary>
+<details><summary>Examples where exempt or not exempt</summary>
  <div id="example-fishing"> 
     
-   <h4>Example - Fishing business A</h4>
+   <h4>Example where exempt - Individual G</h4>
 
-    <p>Grant is a self-employed Indian who lives on a reserve. The fishing activities of the reserve’s Band members in ocean waters near the reserve have a significant historical role in the life of the reserve. Grant is a member of a cooperative of Band members that has a predominant role in the fishing activities on the reserve. Although he sells his catch to off-reserve customers, it is through the cooperative, whose on-reserve activities play a predominant role in the fishing activities of the Band members of the reserve. He keeps his boat and equipment on the reserve. He earns his income from fishing in the ocean waters near the reserve. Therefore, Grant’s fishing income is exempt because he meets all of the above conditions.</p>
-   <h4>Example - Fishing business B</h4>
- <p>Mike is a self-employed Indian fisher who does not live on-reserve. Mike fishes in waters near a reserve. Each season Mike leases his fishing license from an Indian organization that has an office on a reserve. Mike catches and prepares his fish off-reserve and stores his boat, equipment and supplies at his home off-reserve. Mike also sells his catch directly to off-reserve customers. Therefore, Mike’s fishing income is taxable because his fishing and selling activities take place off-reserve and he does not meet all of the above conditions.</p>
+    <p>Individual G is a self-employed Indian who lives on a reserve. The fishing activities of the reserve’s Band members in ocean waters near the reserve have a significant historical role in the life of the reserve. Individual G is a member of a cooperative of Band members that has a predominant role in the fishing activities on the reserve. Although individual G sells their catch to off-reserve customers, it is through the cooperative, whose on-reserve activities play a predominant role in the fishing activities of the Band members of the reserve. Individual G keeps their boat and equipment on the reserve. Individual G earns their income from fishing in the ocean waters near the reserve. Therefore, individual G’s fishing income is exempt because the individual meets all of the above conditions.</p>
+
+   <h4>Example where not exempt - Individual H</h4>
+ <p>Individual H is a self-employed Indian fisher who does not live on-reserve. Individual H fishes in waters near a reserve. Each season individual H leases their fishing license from an Indian organization that has an office on a reserve. Individual H catches and prepares their fish off-reserve and stores their boat, equipment and supplies at the individual H home off-reserve. Individual H also sells their catch directly to off-reserve customers. Therefore, individual H’s fishing income is taxable because the individual fishing and selling activities take place off-reserve and individual H does not meet all of the above conditions.</p>
 
   </div>
 </details>
