--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -979,6 +979,8 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
                   <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
+			<p>If you own more than one residential property in Canada, you must file a separate return for each property.</p>
+			<p>If you are one of several affected owners of the residential property, each of you must file a separate return for the property.</p>
 			<br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
@@ -1046,6 +1048,8 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
                   <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
+			<p>If you own more than one residential property in Canada, you must file a separate return for each property.</p>
+			<p>If you are one of several affected owners of the residential property, each of you must file a separate return for the property.</p>
                  <br>
 			<p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
