--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1158,6 +1158,8 @@ html:lang(fr) .cnjnctn-or:before {
           <h4 id="affected">Affected owner</h4>
           <p>You <strong>must file</strong> a return for each residential property that you own as an affected owner on December 31.</p>
           <p>You will also have to pay the tax unless you qualify for an exemption.</p>
+		<p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+			<p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property.</p>
           <p>An <strong>affected owner</strong> includes, but is not limited to, the following owners of a residential property in Canada:</p>
           <ul>
             <li>An individual who is <strong>not</strong> a Canadian citizen or permanent resident</li>
